# demo_tello_sim

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
.github/workflows/: qa.yml
camera_calibration/: calibrate_charuco.py  capture_images.py  capture_stitching.py  debug_detection.py  load_calibration.py  stitch_images.py  verify_calibration.py
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/: CMakeLists.txt  package.xml
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/config/: bridge.yaml
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/launch/: simple_launch.py
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_0/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_1/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_2/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_3/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_4/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_5/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_6/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/marker_7/: model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/models/tello/: model.config  model.sdf
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/src/: inject_entity.py  tello_plugin.cpp
src/tello-ros2-gazebo-master/tello_ros/tello_gazebo/worlds/: fiducial.sdf  simple.sdf
src/tello_control_pos/: package.xml  setup.cfg  setup.py
src/tello_control_pos/config/: ekf.yaml  optitrack.yaml  xbox_tello.yaml
src/tello_control_pos/launch/: control.launch.py  control_drift.launch.py  control_odom.launch.py  control_real.launch.py  control_real_tuned.launch.py  teleop_real.launch.py  teleop_sim.launch.py
src/tello_control_pos/scripts/: tune_ekf.py
src/tello_control_pos/tello_control_pos/: camera_info_publisher.py  controller.py  drift_simulator.py  (+7 more)
src/tello_pos_control/: package.xml  setup.cfg  setup.py
(+11 files in other folders)
